<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_thread"
        android:title="New Research"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_refresh"
        android:title="@string/label_refresh"
        android:icon="@android:drawable/stat_notify_sync"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/label_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:title="@string/label_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/label_logout"
        app:showAsAction="never" />
</menu>